tests/NormalTests/paczka2/big_fuzzy/59710669.err
Error in line 3: Sut1w S775 78,6
Error in line 5: Sut1w A94 15,9
Error in line 8: E9HKzXvxC5x A94 99,4
Error in line 20: E9HKzXvxC5x A310 22,7
Error in line 27: yovpbseO81C S775 98,3
Error in line 35: aisqHP S775 47,5
Error in line 45: yovpbseO81C S775 62,38
Error in line 47: le5OnpA7S2 S368 14,2
Error in line 50: E9HKzXvxC5x S368 70,62
Error in line 42: yovpbseO81C S775 18,8
Error in line 56: yovpbseO81C A94 45,0
Error in line 48: A310 A310 357,9
Error in line 63: A310 A94 44,4
Error in line 66: A310 S368 31,9
Error in line 54: E9HKzXvxC5x S368 55,5
Error in line 85: A310 S775 102,13
Error in line 75: aisqHP S368 94,2
Error in line 91: Sut1w S775 w0,8
Error in line 80: Sut1w S775 45,0
Error in line 82: A310 S775 43,9
Error in line 93: le5OnpA7S2 A310 87,4
Error in line 97: Sut1w A310 77,4
Error in line 111: A310 A94 42,5
Error in line 110: aisqHP S368 62,2
Error in line 116: aisqHP A94 6,4
Error in line 113: yovpbseO81C A94 37,2
Error in line 121: yovpbseO81C A310 40,2
Error in line 130: yovpbseO81C S775 -2,3
Error in line 132: Sut1w S3 8  ,2
Error in line 112: E9HKzXvxC5x A94 80,5
Error in line 131: Sut1w S368 3,9
Error in line 124: le5OnpA7S2 S775 8,1
Error in line 141: kfUkgdQlfk S368 59,92
Error in line 142: kfUkgdQlfk S368 146,2
Error in line 143: kfUkgdQlfk S775 53,7
Error in line 152: A310 S775 90,4
Error in line 148: kfUkgdQlfk A310 58,4
Error in line 161: A310 A310 21,3
Error in line 157: aisqHP A94 27,5
Error in line 123: yovpbseO81C S775 34,1
Error in line 139: Sut1w S775 85,7
Error in line 177: aisqHP S775 4,5
Error in line 180: le5OnpA7S2 S368 12,3
Error in line 185: le?OnpA7S2 A310 ?0,4
Error in line 181: aisqHP A310 97,7
Error in line 193: kfUkgdQlfk S775 19,5
Error in line 186: aisqHP A94 54,7
Error in line 195: E9HKzXvxC5x S775 63,2
Error in line 194: kfUkgdQlfk A310 94,4
Error in line 201: E9HKzXvxC5x S368 37,3
Error in line 192: Sut1w A94 7,2
Error in line 225: E9HKzXvxC5x A94 51,2
Error in line 227: Sut1w S775 6,1
Error in line 236: E9HKzXvxC5x S368 79,49
